force-app/objects/ProductTransfer/ProductTransfer.object-meta.xml
<CustomObject>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged on Arrival</fullName>
                </value>
                <value>
                    <fullName>Wrong Item</fullName>
                </value>
                <value>
                    <fullName>Excess Quantity</fullName>
                </value>
                <value>
                    <fullName>Quality Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>LongTextArea</type>
        <length>500</length>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <label>Rejected By</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Rejected Product Transfers</relationshipLabel>
        <relationshipName>Rejected_Product_Transfers</relationshipName>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_Reversal__c</fullName>
        <label>Is Reversal</label>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>Reversal_Of__c</fullName>
        <label>Reversal Of</label>
        <type>Lookup</type>
        <referenceTo>ProductTransfer</referenceTo>
        <relationshipLabel>Reversal Transfers</relationshipLabel>
        <relationshipName>Reversal_Transfers</relationshipName>
    </fields>
</CustomObject>