force-app/objects/ProductTransfer/fields/Is_Reversal__c.field-meta.xml
<CustomField>
    <fullName>Is_Reversal__c</fullName>
    <label>Is Reversal</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>