force-app/objects/ProductTransfer/fields/Rejected_By__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By__c</fullName>
    <label>Rejected By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Rejected Product Transfers</relationshipLabel>
    <relationshipName>Rejected_Product_Transfers</relationshipName>
</CustomField>