force-app/objects/ProductTransfer/fields/Rejection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Notes__c</fullName>
    <label>Rejection Notes</label>
    <type>LongTextArea</type>
    <length>500</length>
</CustomField>