force-app/objects/ProductTransfer/fields/Reversal_Of__c.field-meta.xml
<CustomField>
    <fullName>Reversal_Of__c</fullName>
    <label>Reversal Of</label>
    <type>Lookup</type>
    <referenceTo>ProductTransfer</referenceTo>
    <relationshipLabel>Reversal Transfers</relationshipLabel>
    <relationshipName>Reversal_Transfers</relationshipName>
</CustomField>